perf: lazy transcript-row allocation in TerminalBuffer; rename materialyou package to monet